rearranged program and added critical damage calculation

--- a/README.ME
+++ b/README.ME
@@ -18,3 +18,7 @@ I plan to use this file as a log of my additions.
 
 2019/08/19 Incorporated a prompt & if/else to determine if the damage roll function
   was needed and ran function if applicable.
+
+2019/08/22 Rearranged my program to eliminate functions due to each function only
+  called once in the attack loop. Also added a loop to prompt for weapon damage
+  and automatically doubled the damage rolls on a natural 20.
